--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "react": "18.2.0",
     "react-native": "0.72.1",
-    "react-native-html-to-pdf": "^0.12.0"
+    "react-native-html-to-pdf": "^0.12.0",
+    "scripts": "^0.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
